--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <ul id="url-container"></ul>
 
     <script src="index.js"></script>
 </body>
