added-delete-all

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="delete-btn">DELETE ALL <p id="delete-info" class="delete-info">press double-click</p></button>
+    
     <ul id="url-container"></ul>
 
     <script src="index.js"></script>
