added-save-current-page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
-    <button id="delete-btn">DELETE ALL <p id="delete-info" class="delete-info">press double-click</p></button>
+    <div class="delete-rel"><button id="delete-btn">DELETE ALL <p id="delete-info" class="delete-info">press double-click</p></button></div>
+    <button id="current-btn">ADD CURRENT PAGE</button>
     
     <ul id="url-container"></ul>
 
